--- a/microservicecloud-config-dept-client.yaml
+++ b/microservicecloud-config-dept-client.yaml
@@ -9,29 +9,57 @@ spring:
   profiles: dev
   application: 
     name: microservicecloud-config-dept-client
-  datasource: 
-  type: com.alibaba.druid.pool.DruidDataSource
-  driver-class-name: org.gjt.mm.mysql.Driver
-  url: jdbc:mysql:///cloudDB01
+  datasource:
+  type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
+  driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
+  url: jdbc:mysql:///cloudDB01                            # 数据库名称
   username: root
   password: root
-  dbcp2: 
-    min-idle: 5
-    initial-size: 5
-    max-total: 5
-    max-wait-millis: 200
-mybatis: 
-  config-location: classpath:mybatis/mybatis.cfg.xml
-  type-aliases-package: com.hb.springcloud.entities
-  mapper-loactions: 
-  - classpath:mybatis/mapper/**/*.xml
-  
+  dbcp2:
+    min-idle: 5                                           # 数据库连接池的最小维持连接数
+    initial-size: 5                                       # 初始化连接数
+    max-total: 5                                          # 最大连接数
+    max-wait-millis: 200                                  # 等待连接获取的最大超时时间
+      
 eureka: 
   client: #客户端注册进eureka服务列表内
     service-url: 
       defaultZone: http://eureka7001.com:7001/eureka   
   instance:     
     instance-id: dept-8001.com
+    prefer-ip-address: true
+
+info: 
+  app.name: hb-microservicecloud
+  company.name: www.hb.com
+  build.artifactId: $project.artifactId$
+  build.version: $project.version$    
+  
+---
+server: 
+  port: 8002
+spring: 
+  profiles: test
+  application: 
+    name: microservicecloud-config-dept-client
+  datasource:
+  type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
+  driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
+  url: jdbc:mysql:///cloudDB02                            # 数据库名称
+  username: root
+  password: root
+  dbcp2:
+    min-idle: 5                                           # 数据库连接池的最小维持连接数
+    initial-size: 5                                       # 初始化连接数
+    max-total: 5                                          # 最大连接数
+    max-wait-millis: 200                                  # 等待连接获取的最大超时时间
+      
+eureka: 
+  client: #客户端注册进eureka服务列表内
+    service-url: 
+      defaultZone: http://eureka7001.com:7001/eureka   
+  instance:     
+    instance-id: dept-8002.com
     prefer-ip-address: true
 
 info: 
