--- a/microservicecloud-config-dept-client.yaml
+++ b/microservicecloud-config-dept-client.yaml
@@ -5,6 +5,14 @@ spring:
 ---
 server: 
   port: 8001
+
+mybatis:
+  config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
+  type-aliases-package: com.hb.springcloud.entities         # 所有Entity别名类所在包
+  mapper-locations:
+  - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
+  
+  
 spring: 
   profiles: dev
   application: 
@@ -38,6 +46,14 @@ info:
 ---
 server: 
   port: 8002
+
+mybatis:
+  config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
+  type-aliases-package: com.hb.springcloud.entities         # 所有Entity别名类所在包
+  mapper-locations:
+  - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
+
+  
 spring: 
   profiles: test
   application: 
