--- a/microservicecloud-config-dept-client.yaml
+++ b/microservicecloud-config-dept-client.yaml
@@ -1,39 +1,36 @@
 spring: 
-  profiles: 
-    active: 
+  profiles:
+    active:
     - dev
 ---
-server: 
+server:
   port: 8001
-
-mybatis:
-  config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
-  type-aliases-package: com.hb.springcloud.entities         # 所有Entity别名类所在包
-  mapper-locations:
-  - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
-  
-  
-spring: 
+spring:
   profiles: dev
-  application: 
+  application:
     name: microservicecloud-config-dept-client
   datasource:
-  type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-  driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
-  url: jdbc:mysql:///cloudDB01                            # 数据库名称
-  username: root
-  password: root
-  dbcp2:
-    min-idle: 5                                           # 数据库连接池的最小维持连接数
-    initial-size: 5                                       # 初始化连接数
-    max-total: 5                                          # 最大连接数
-    max-wait-millis: 200                                  # 等待连接获取的最大超时时间
-      
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: org.gjt.mm.mysql.Driver
+    url: jdbc:mysql:///cloudDB01
+    username: root
+    password: root
+    dbcp2:
+      min-idle: 5
+      initial-size: 5
+      max-total: 5
+      max-wait-millis: 200    
+mybatis: 
+  config-location: classpath:mybatis/mybatis.cfg.xml
+  type-aliases-package: com.hb.springcloud.entities
+  mapper-locations: 
+  - classpath:mybatis/mapper/**/*.xml
+
 eureka: 
   client: #客户端注册进eureka服务列表内
-    service-url: 
-      defaultZone: http://eureka7001.com:7001/eureka   
-  instance:     
+    service-url:
+      defaultZone: http://eureka7001.com/eureka/
+  instance:
     instance-id: dept-8001.com
     prefer-ip-address: true
 
@@ -41,40 +38,39 @@ info:
   app.name: hb-microservicecloud
   company.name: www.hb.com
   build.artifactId: $project.artifactId$
-  build.version: $project.version$    
-  
+  build.version: $project.version$
+
 ---
-server: 
+server:
   port: 8002
-
-mybatis:
-  config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
-  type-aliases-package: com.hb.springcloud.entities         # 所有Entity别名类所在包
-  mapper-locations:
-  - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
-
-  
-spring: 
+spring:
   profiles: test
-  application: 
+  application:
     name: microservicecloud-config-dept-client
   datasource:
-  type: com.alibaba.druid.pool.DruidDataSource            # 当前数据源操作类型
-  driver-class-name: org.gjt.mm.mysql.Driver              # mysql驱动包
-  url: jdbc:mysql:///cloudDB02                            # 数据库名称
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: org.gjt.mm.mysql.Driver
+
+  url: jdbc:mysql:///cloudDB02
   username: root
   password: root
-  dbcp2:
-    min-idle: 5                                           # 数据库连接池的最小维持连接数
-    initial-size: 5                                       # 初始化连接数
-    max-total: 5                                          # 最大连接数
-    max-wait-millis: 200                                  # 等待连接获取的最大超时时间
-      
+  dbcp2: 
+    min-idle: 5
+    initial-size: 5
+    max-total: 5
+    max-wait-millis: 200
+    
+mybatis: 
+  config-location: classpath:mybatis/mybatis.cfg.xml
+  type-aliases-package: com.hb.springcloud.entities
+  mapper-locations: 
+  - classpath:mybatis/mapper/**/*.xml
+
 eureka: 
   client: #客户端注册进eureka服务列表内
-    service-url: 
-      defaultZone: http://eureka7001.com:7001/eureka   
-  instance:     
+    service-url:
+      defaultZone: http://eureka7001.com/eureka/
+  instance:
     instance-id: dept-8002.com
     prefer-ip-address: true
 
@@ -82,4 +78,4 @@ info:
   app.name: hb-microservicecloud
   company.name: www.hb.com
   build.artifactId: $project.artifactId$
-  build.version: $project.version$    
+  build.version: $project.version$
